Created Input and Activation Function class

--- a/HW-1/McCulloch-Pitts-Neuron-Model.ipynb
+++ b/HW-1/McCulloch-Pitts-Neuron-Model.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-18T04:18:17.267941Z",
-     "start_time": "2024-01-18T04:18:17.265533Z"
+     "end_time": "2024-01-18T18:59:33.028118Z",
+     "start_time": "2024-01-18T18:59:33.027724Z"
     }
    },
    "outputs": [],
@@ -18,41 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "outputs": [],
    "source": [
+    "class Input:\n",
+    "    def __init__(self, values):\n",
+    "        self.values = values\n",
+    "\n",
+    "class ActivationFunction:\n",
+    "    @staticmethod\n",
+    "    def apply(weights, inputs, threshold):\n",
+    "        if len(inputs) != len(weights):\n",
+    "            raise ValueError(\"Number of inputs do not match number of weights\")\n",
+    "\n",
+    "        aggregation = np.dot(inputs, weights)\n",
+    "        return 1 if aggregation > threshold else 0\n",
+    "\n",
     "class McCullochPittsNeuron:\n",
     "    def __init__(self, weights, threshold):\n",
     "        self.weights = weights\n",
     "        self.threshold = threshold\n",
+    "        self.activation_function = ActivationFunction()\n",
     "\n",
-    "    def activate(self, inputs):\n",
-    "        if len(inputs) != len(self.weights):\n",
-    "            raise ValueError(\"Number of inputs do not match number of weights\")\n",
-    "\n",
-    "        aggregation = np.dot(inputs, self.weights)\n",
-    "        # print(aggregation)\n",
-    "        \n",
-    "        return 1 if aggregation > self.threshold else 0"
+    "    def activate(self, input_data):\n",
+    "        if not isinstance(input_data, Input):\n",
+    "            raise ValueError(\"Input data must be an instance of Input class\")\n",
+    "        return self.activation_function.apply(self.weights, input_data.values, self.threshold)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T04:18:17.745368Z",
-     "start_time": "2024-01-18T04:18:17.742396Z"
+     "end_time": "2024-01-18T19:00:29.069038Z",
+     "start_time": "2024-01-18T19:00:29.062043Z"
     }
    },
    "id": "86fe6bc12294019c"
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "outputs": [],
    "source": [
-    "#Example to stimulate AND, OR, and NOR gates\n",
-    "\n",
     "def logic_gate_demo(gate_type):\n",
-    "    inputs = [[0, 0], [0, 1], [1, 0], [1, 1]]\n",
+    "    inputs = [Input([0, 0]), Input([0, 1]), Input([1, 0]), Input([1, 1])]\n",
     "\n",
     "    if gate_type == \"AND\":\n",
     "        neuron = McCullochPittsNeuron([1, 1], 1)\n",
@@ -64,22 +72,22 @@
     "        raise ValueError(\"Unsupported Gate Type\")\n",
     "\n",
     "    print(f\"{gate_type} Gate\")\n",
-    "    for input_pair in inputs:\n",
-    "        output = neuron.activate(input_pair)\n",
-    "        print(f\"Input: {input_pair}, Output: {output}\")"
+    "    for input_data in inputs:\n",
+    "        output = neuron.activate(input_data)\n",
+    "        print(f\"Input: {input_data.values}, Output: {output}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T04:18:18.289338Z",
-     "start_time": "2024-01-18T04:18:18.286849Z"
+     "end_time": "2024-01-18T19:00:29.432096Z",
+     "start_time": "2024-01-18T19:00:29.422937Z"
     }
    },
    "id": "30fb0f29b5ac85b"
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -111,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-18T04:18:19.544887Z",
-     "start_time": "2024-01-18T04:18:19.524520Z"
+     "end_time": "2024-01-18T19:00:32.273785Z",
+     "start_time": "2024-01-18T19:00:32.252094Z"
     }
    },
    "id": "a91e4a8531f62584"
@@ -125,7 +133,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "c8dba7467c0f1894"
+   "id": "92d07d57485fed37"
   }
  ],
  "metadata": {
