--- a/HW-6,7/deep_neural_network.ipynb
+++ b/HW-6,7/deep_neural_network.ipynb
@@ -36,13 +36,12 @@
     "        s = 1 / (1 + np.exp(-Z))\n",
     "        return dA * s * (1 - s)\n",
     "\n",
-    "\n",
     "class Layer:\n",
     "    def __init__(self, n_inputs, n_neurons, activation_type):\n",
     "        self.parameters = Parameters(n_inputs, n_neurons)\n",
     "        self.activation_type = activation_type\n",
-    "        self.Z = None  # Cache to store the linear component for backpropagation\n",
-    "        self.A = None  # Cache to store the activation output for backpropagation\n",
+    "        self.Z = None\n",
+    "        self.A = None\n",
     "\n",
     "    def forward(self, inputs):\n",
     "        self.Z = np.dot(inputs, self.parameters.weights) + self.parameters.bias\n",
@@ -66,6 +65,37 @@
     "        self.parameters.update(dW, dB, learning_rate)\n",
     "        return dA_prev\n",
     "\n",
+    "class Model:\n",
+    "    def __init__(self):\n",
+    "        self.layers = []\n",
+    "\n",
+    "    def add(self, layer):\n",
+    "        self.layers.append(layer)\n",
+    "\n",
+    "    def forward_pass(self, X):\n",
+    "        A = X\n",
+    "        for layer in self.layers:\n",
+    "            A = layer.forward(A)\n",
+    "        return A\n",
+    "\n",
+    "    def backward_pass(self, Y, Y_hat, learning_rate):\n",
+    "        dA = compute_mse_loss_derivative(Y, Y_hat)\n",
+    "        for i in reversed(range(len(self.layers))):\n",
+    "            if i > 0:\n",
+    "                dA = self.layers[i].backward(dA, self.layers[i-1].A, learning_rate)\n",
+    "            else:  # For the first layer, previous activation is the input X itself\n",
+    "                dA = self.layers[i].backward(dA, X, learning_rate)\n",
+    "\n",
+    "    def compute_loss(self, Y, Y_hat):\n",
+    "        return compute_mse_loss(Y, Y_hat)\n",
+    "\n",
+    "    def train(self, X, Y, learning_rate, epochs):\n",
+    "        for epoch in range(epochs):\n",
+    "            Y_hat = self.forward_pass(X)\n",
+    "            loss = self.compute_loss(Y, Y_hat)\n",
+    "            self.backward_pass(Y, Y_hat, learning_rate)\n",
+    "            if epoch % 100 == 0:\n",
+    "                print(f'Epoch {epoch}, Loss: {loss}')\n",
     "\n",
     "def compute_mse_loss(Y, Y_hat):\n",
     "    return np.mean((Y - Y_hat) ** 2)\n",
