Assignment - 11 (mini-batch implementation)

--- a/HW11/NN_mini_batch.ipynb
+++ b/HW11/NN_mini_batch.ipynb
@@ -121,24 +121,30 @@
     "    def train(self, X, Y, learning_rate, epochs, lambda_reg, batch_size=64):\n",
     "        n_samples = X.shape[0]\n",
     "        n_batches = int(np.ceil(n_samples / batch_size))\n",
-    "        # MINI BATCH Implementation\n",
+    "\n",
     "        for epoch in range(epochs):\n",
+    "            # Shuffle the dataset at the beginning of each epoch\n",
     "            permutation = np.random.permutation(n_samples)\n",
     "            X_shuffled = X[permutation]\n",
     "            Y_shuffled = Y[permutation]\n",
-    "        \n",
+    "\n",
     "            for batch_index in range(n_batches):\n",
     "                start = batch_index * batch_size\n",
     "                end = start + batch_size\n",
     "                X_batch = X_shuffled[start:end]\n",
     "                Y_batch = Y_shuffled[start:end]\n",
     "\n",
+    "                # Step 2: Feed it to Neural Network for a forward pass\n",
     "                Y_hat = self.forward_pass(X_batch)\n",
+    "\n",
+    "                # Calculate the loss \n",
     "                loss = self.compute_loss(Y_batch, Y_hat, lambda_reg)\n",
+    "\n",
+    "                # Step 3 & 4: Backward pass to calculate mean gradients and update weights\n",
     "                self.backward_pass(Y_batch, Y_hat, learning_rate, lambda_reg)\n",
     "\n",
     "            if epoch % 100 == 0:\n",
-    "                # Compute loss on the entire dataset for monitoring\n",
+    "                # Compute the loss on the entire dataset for monitoring\n",
     "                Y_hat_full = self.forward_pass(X)\n",
     "                full_loss = self.compute_loss(Y, Y_hat_full, lambda_reg)\n",
     "                print(f'Epoch {epoch}, Loss: {full_loss}')\n",
