Lab-1, Lab-2, HW-15

--- a/Labs/Lab-2/Lab_2_binary_classification_DNN_Training.ipynb
+++ b/Labs/Lab-2/Lab_2_binary_classification_DNN_Training.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -255,14 +255,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T18:44:08.298915Z",
-     "start_time": "2024-03-28T18:44:08.259662Z"
+     "end_time": "2024-03-28T19:43:09.951298Z",
+     "start_time": "2024-03-28T19:43:09.938353Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "class Train:\n",
@@ -305,30 +305,43 @@
     "            if epoch % 10 == 0: # Print the cost and accuracy every 10 epochs\n",
     "                print(f\"Epoch {epoch}, Cost: {cost_avg}, Training Accuracy: {train_accuracy*100:.2f}%, Validation Accuracy: {val_accuracy*100:.2f}%\")\n",
     "\n",
-    "\n",
     "    @staticmethod\n",
     "    def calculate_accuracy(Y_true, Y_pred):\n",
-    "        # Convert numpy arrays to TensorFlow tensors\n",
-    "        Y_true_tf = tf.convert_to_tensor(Y_true, dtype=tf.float32)\n",
-    "        Y_pred_tf = tf.convert_to_tensor(Y_pred > 0.5, dtype=tf.float32)\n",
+    "        # Convert predictions to binary outcomes\n",
+    "        Y_pred_binary = (Y_pred > 0.5).astype(int)\n",
     "\n",
-    "        # Use TensorFlow's method to calculate accuracy\n",
-    "        accuracy = tf.reduce_mean(tf.cast(tf.equal(Y_true_tf, Y_pred_tf), tf.float32))\n",
+    "        # Compare predictions with true labels\n",
+    "        correct_predictions = np.equal(Y_true, Y_pred_binary)\n",
     "\n",
-    "        # Convert the result back to a numpy array if needed\n",
-    "        return accuracy.numpy()\n"
+    "        # Calculate the accuracy\n",
+    "        accuracy = np.mean(correct_predictions)\n",
+    "\n",
+    "        return accuracy\n",
+    "\n",
+    "\n",
+    "    # @staticmethod\n",
+    "    # def calculate_accuracy(Y_true, Y_pred):\n",
+    "    #     # Convert numpy arrays to TensorFlow tensors\n",
+    "    #     Y_true_tf = tf.convert_to_tensor(Y_true, dtype=tf.float32)\n",
+    "    #     Y_pred_tf = tf.convert_to_tensor(Y_pred > 0.5, dtype=tf.float32)\n",
+    "    # \n",
+    "    #     # Use TensorFlow's method to calculate accuracy\n",
+    "    #     accuracy = tf.reduce_mean(tf.cast(tf.equal(Y_true_tf, Y_pred_tf), tf.float32))\n",
+    "    # \n",
+    "    #     # Convert the result back to a numpy array if needed\n",
+    "    #     return accuracy.numpy()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T18:44:08.307195Z",
-     "start_time": "2024-03-28T18:44:08.282855Z"
+     "end_time": "2024-03-28T19:43:09.955660Z",
+     "start_time": "2024-03-28T19:43:09.941412Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "# Initialize the model\n",
@@ -347,14 +360,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T18:44:08.307586Z",
-     "start_time": "2024-03-28T18:44:08.290232Z"
+     "end_time": "2024-03-28T19:43:09.955780Z",
+     "start_time": "2024-03-28T19:43:09.943537Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -367,9 +380,14 @@
     "X_train = X_train.reshape((X_train.shape[0], -1)).T / 255.  # Flatten and normalize\n",
     "X_test = X_test.reshape((X_test.shape[0], -1)).T / 255.\n",
     "\n",
-    "# Convert labels to binary classification\n",
-    "y_train = (y_train > 0).astype(int)  # Use int directly\n",
-    "y_test = (y_test > 0).astype(int)    # Use int directly\n",
+    "# Convert labels for binary classification: 1 for digit '5', 0 for all other digits\n",
+    "y_train = (y_train == 5).astype(int)\n",
+    "y_test = (y_test == 5).astype(int)\n",
+    "\n",
+    "\n",
+    "# # Convert labels to binary classification\n",
+    "# y_train = (y_train > 0).astype(int)  # Use int directly\n",
+    "# y_test = (y_test > 0).astype(int)    # Use int directly\n",
     "\n",
     "# Convert labels to the correct shape\n",
     "y_train = y_train.reshape(1, -1)\n",
@@ -378,73 +396,71 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T18:44:08.561595Z",
-     "start_time": "2024-03-28T18:44:08.293973Z"
+     "end_time": "2024-03-28T19:43:10.346988Z",
+     "start_time": "2024-03-28T19:43:09.950069Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Cost: 0.3446142744762822, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 10, Cost: 0.32235249759123874, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 20, Cost: 0.32226773072355336, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 30, Cost: 0.32250067421875367, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 40, Cost: 0.3223056529188885, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 50, Cost: 0.32231387896304164, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 60, Cost: 0.32224264637993427, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 70, Cost: 0.32228298925550714, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 80, Cost: 0.32230502453211796, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 90, Cost: 0.3223175618988672, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 100, Cost: 0.3223455087300091, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 110, Cost: 0.32235241158307504, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 120, Cost: 0.3222757648364511, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 130, Cost: 0.3222383876229454, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 140, Cost: 0.32223798461601055, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 150, Cost: 0.32242282867672784, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 160, Cost: 0.3222382264500326, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 170, Cost: 0.3223477779585102, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 180, Cost: 0.3222312331508035, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Epoch 190, Cost: 0.32227238846694395, Training Accuracy: 90.13%, Validation Accuracy: 90.20%\n",
-      "Test Accuracy: 90.20%\n"
+      "Epoch 0, Cost: 0.625415896877363, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 10, Cost: 0.32257447550797713, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 20, Cost: 0.30597913443944946, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 30, Cost: 0.30387424085877324, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 40, Cost: 0.30352074860202094, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 50, Cost: 0.3033705829021141, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 60, Cost: 0.3033171544382226, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 70, Cost: 0.30335252985278094, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 80, Cost: 0.30335181591935745, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 90, Cost: 0.30331330512737437, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 100, Cost: 0.3033132215874278, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 110, Cost: 0.3033132410979818, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 120, Cost: 0.3033132183323991, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 130, Cost: 0.30331321956295154, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 140, Cost: 0.3034286014250374, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 150, Cost: 0.30331324664486886, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 160, Cost: 0.30350556431721815, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 170, Cost: 0.30335173308949787, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 180, Cost: 0.3035055210471853, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Epoch 190, Cost: 0.3033132386748603, Training Accuracy: 90.96%, Validation Accuracy: 91.08%\n",
+      "Test Accuracy: 91.08%\n"
      ]
     }
    ],
    "source": [
-    "train = Train(model, X_train, y_train, X_test, y_test, learning_rate=0.05, epochs=200, batch_size=64, normalize=True)\n",
+    "train = Train(model, X_train, y_train, X_test, y_test, learning_rate=0.001, epochs=200, batch_size=64, normalize=True)\n",
     "train.execute()\n",
     "\n",
     "# Evaluate the model on the test set\n",
-    "\n",
-    "\n",
-    "Y_test_pred = model.forward_propagation(X_test)\n",
-    "test_accuracy = Train.calculate_accuracy(y_test.reshape(1, -1), Y_test_pred)  # Ensure y_test is in the correct shape\n",
+    "Y_test_pred = model.forward_propagation(X_test) \n",
+    "test_accuracy = Train.calculate_accuracy(y_test.reshape(1, -1), Y_test_pred) # Reshape the labels to the correct shape\n",
     "\n",
     "print(f\"Test Accuracy: {test_accuracy*100:.2f}%\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T18:47:41.609926Z",
-     "start_time": "2024-03-28T18:44:08.601644Z"
+     "end_time": "2024-03-28T19:46:55.357647Z",
+     "start_time": "2024-03-28T19:43:10.314609Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-28T18:47:41.619751Z",
-     "start_time": "2024-03-28T18:47:41.617207Z"
+     "end_time": "2024-03-28T19:46:56.363949Z",
+     "start_time": "2024-03-28T19:46:56.362800Z"
     }
    }
   }
