--- a/Labs/Lab-2/Lab_2_binary_classification_DNN_Training.ipynb
+++ b/Labs/Lab-2/Lab_2_binary_classification_DNN_Training.ipynb
@@ -316,20 +316,7 @@
     "        # Calculate the accuracy\n",
     "        accuracy = np.mean(correct_predictions)\n",
     "\n",
-    "        return accuracy\n",
-    "\n",
-    "\n",
-    "    # @staticmethod\n",
-    "    # def calculate_accuracy(Y_true, Y_pred):\n",
-    "    #     # Convert numpy arrays to TensorFlow tensors\n",
-    "    #     Y_true_tf = tf.convert_to_tensor(Y_true, dtype=tf.float32)\n",
-    "    #     Y_pred_tf = tf.convert_to_tensor(Y_pred > 0.5, dtype=tf.float32)\n",
-    "    # \n",
-    "    #     # Use TensorFlow's method to calculate accuracy\n",
-    "    #     accuracy = tf.reduce_mean(tf.cast(tf.equal(Y_true_tf, Y_pred_tf), tf.float32))\n",
-    "    # \n",
-    "    #     # Convert the result back to a numpy array if needed\n",
-    "    #     return accuracy.numpy()\n"
+    "        return accuracy\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -347,7 +334,7 @@
     "# Initialize the model\n",
     "model = Model()\n",
     "\n",
-    "# Add layers to the model according to the given specification\n",
+    "# Add layers to the model\n",
     "model.add(Layer(n_input=784, n_neurons=10, activation=\"relu\"))  # Input layer with size 784 for MNIST images (28x28)\n",
     "model.add(Layer(n_input=10, n_neurons=8, activation=\"relu\"))    # 2nd layer\n",
     "model.add(Layer(n_input=8, n_neurons=8, activation=\"relu\"))     # 3rd layer\n",
@@ -384,12 +371,6 @@
     "y_train = (y_train == 5).astype(int)\n",
     "y_test = (y_test == 5).astype(int)\n",
     "\n",
-    "\n",
-    "# # Convert labels to binary classification\n",
-    "# y_train = (y_train > 0).astype(int)  # Use int directly\n",
-    "# y_test = (y_test > 0).astype(int)    # Use int directly\n",
-    "\n",
-    "# Convert labels to the correct shape\n",
     "y_train = y_train.reshape(1, -1)\n",
     "y_test = y_test.reshape(1, -1)\n"
    ],
